# agentic-based-Mental-Health-chatbot-using-Langchain-workflows

./: .env_example  .gitignore  GreenLife_Poc.ipynb  README.md  Readme.md  crewai_RAG_AdvancedAgents.py  requirements.txt  run_api.py
Agents/: READM.md
CrewAI_Project_Samples/: streamlit_app.py  streamlit_app_priya.py  streamlit_appv2.py  testing.py
CrewAI_Project_Samples/RAG/: crewai_RAG.py  pyproject.toml
CrewAI_Project_Samples/SpeechToText/: SpeechToText.py
CrewAI_Project_Samples/src/crewai_knowledge_chatbot/: crew.py
RAG/: Mental_Health_RAG_model.ipynb
SpeechToText/: speech_to_text.py
api_integration/: .env_example  Dockerfile  chatbot.py  home.py  pyproject.toml  requirements.txt  streamlit_app.py
api_integration/database/: database.py
api_integration/pages/: 1_user_form.py  3_chatbot.py  streamlit_app_copy.py
api_integration/src/crewai_knowledge_chatbot/: crew.py
api_integration/src/crewai_knowledge_chatbot/config/: agents.yaml  tasks.yaml
backend/: .gitignore  Pipfile  assessment_context.py  main.py  models.py  utils.py
backend/storage/: assessment_form.json  user.json
data/: How_to_Identify_Stress.html
frontend/: package-lock.json  package.json
frontend/src/: assessment.jsx  assessmentModal.jsx  chat.jsx  hero.jsx  main.jsx  modal.jsx  onboarding.jsx
model/: app.py  autogen_LangChain.ipynb  autogen_LlamaIndex.ipynb  autogen_LlamaIndex.py  logger.py
src/crewai_knowledge_chatbot/: main.py
src/crewai_knowledge_chatbot/config/: agents.yaml  tasks.yaml
test_project/: Dockerfile  app.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
test_project/src/test_project/: crew.py  main.py
test_project/src/test_project/config/: agents.yaml  tasks.yaml
