[project]
name = "crewai_knowledge_chatbot"
version = "0.1.0"
description = "crewai_knowledge_chatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "base64",
    "crewai[tools]>=0.114.0,<1.0.0",
    "gtts>=2.5.4",
    "pyttsx3>=2.98",
    "speechrecognition>=3.14.2",
    "streamlit>=1.44.1",
    "streamlit-audio-recorder",
]

[project.scripts]
crewai_knowledge_chatbot = "crewai_knowledge_chatbot.main:run"
run_crew = "crewai_knowledge_chatbot.main:run"
train = "crewai_knowledge_chatbot.main:train"
replay = "crewai_knowledge_chatbot.main:replay"
test = "crewai_knowledge_chatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
